force-app/main/default/objects/ssot__ManagedEvent__dlm/fields/ssot__EstimatedParticipantCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedParticipantCount__c</fullName>
    <label>Estimated Participant Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedParticipantCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>