force-app/main/default/objects/ssot__ManagedEvent__dlm/fields/ssot__EventURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__EventURL__c</fullName>
    <label>Event URL</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EventURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>