force-app/main/default/objects/ssot__ManagedEvent__dlm/fields/ssot__ManagedEventMode__c.field-meta.xml
<CustomField>
    <fullName>ssot__ManagedEventMode__c</fullName>
    <label>Mode</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ManagedEventMode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>