force-app/main/default/objects/ssot__ManagedEvent__dlm/fields/ssot__ManagedEventNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ManagedEventNumber__c</fullName>
    <label>Managed Event Number</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ManagedEventNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>