force-app/main/default/objects/ssot__ManagedEvent__dlm/fields/ssot__UniqueEventNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__UniqueEventNumber__c</fullName>
    <label>Unique Event Number</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UniqueEventNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>